--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+#spring.datasource.url=jdbc:mysql://localhost:3306/app?serverTimezone=Asia/Seoul&userUnicode=yes&characterEncoding=utf8
+#
+#spring.datasource.username=root
