--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
-#spring.datasource.url=jdbc:mysql://localhost:3306/app?serverTimezone=Asia/Seoul&userUnicode=yes&characterEncoding=utf8
-#
-#spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://${DB_HOSTNAME}:${DB_PORT}/${DB_SCHEMA}?${DB_PARAMETER}
+
+spring.datasource.username=${DB_USERNAME}
+
+spring.datasource.password=${DB_PASSWORD}
